# python-postgresql-modules

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: release.yml  testing.yml
docs/: conf.py  rst.rst
pgsql-utils/util/: array.py  json.py  number.py  object.py  string.py
pgsql_utils/: __init__.py
pgsql_utils/api/: websend.py
pgsql_utils/debtreview/: pda.py
pgsql_utils/financial/: za_vatrate.py
pgsql_utils/merge/: __init__.py  exception.py  pgsql.py  taginterator.py  tags.py
pgsql_utils/merge/common/: base.py
pgsql_utils/merge/html/: merge.py
pgsql_utils/merge/mdocx/: merge.py
pgsql_utils/merge/text/: merge.py
pgsql_utils/pgproc/: debug.py  fake_plpy.py  wrap_plpy.py
pgsql_utils/util/: array.py  date.py  json.py  math.py  util.py
tests/: test_merge.py  test_pgproc.py  test_string.py
tests/data/: Mail_Merge_Test_Merged.docx  Mail_Merge_Test_Template.docx  Mail_Merge_Test_Template_inputdata.json  Mail_Merge_Test_Template_peek_result.json
