[metadata]
name = pgsql-utils
description = Python utilities for PostgreSQL
long_description = file: README.rst
author = Hein Puth
author_email = hein.puth@gmail.com
maintainer = Hein Puth
maintainer_email = hein.puth@gmail.com
url = https://github.com/bitechdev/python-postgresql-modules
license = MIT
# keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: MIT License with No-Use Clause
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
# entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3
install_requires =
    num2words>=0.4.0

[options.extras_require]
dev =
    coverage
    codecov
    sphinx
    sphinx_rtd_theme
    twine
    setuptools_scm[toml]>=3.4.3
    black==23.3.0
    importlib_metadata>=4.8.1;python_version<"3.8"
